# dotspicejar

./: .envrc  .flake8  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  show.py
dotspicejar/: hamster.py  spicer_tui.py
dotspicejar/braille/: braille_cell.py
dotspicejar/configmgr/: configmain.py  configvalue.py
dotspicejar/navigator/: __init__.py  braille_string_planner.py  nav_planner.py
src/: dotspicejar.py  hack_config.py
src/braille/: __init__.py  braille_cell.py  braille_string.py  braille_translator.py
src/configmgr/: __init__.py  configvalue.py
src/navigator/: braille_string_planner.py  nav_planner.py
test/: test_braille_cell.py  test_braille_navigator.py  test_braille_translator.py
